--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,9 @@
 services:
   mongodb:
-    image: 'mongo:latest'
     environment:
-      - 'MONGO_INITDB_DATABASE=udtale'
-      - 'MONGO_INITDB_ROOT_PASSWORD=secret'
-      - 'MONGO_INITDB_ROOT_USERNAME=root'
+      - MONGO_INITDB_DATABASE=udtale
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_DB_USERNAME}
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_DB_PASSWORD}
     ports:
       - '27017:27017'
     profiles:
