--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
 spring.application.name=udtale
 
-spring.data.mongodb.uri=mongodb+srv://${MONGO_DB_USERNAME}:${MONGO_DB_PASSWORD}@udtale.nrhidcx.mongodb.net/?retryWrites=true&w=majority&appName=udtale
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 
